--- a/Noblephoneservices.html
+++ b/Noblephoneservices.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="Noblephoneservices.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+	<link rel="stylesheet" type="text/css" href="asset/Noblephoneservices.css">
 	<title>itel,infinix&tecno Phone repairs</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
 			<label for="check"><span class="material-symbols-outlined">menu</span></label>
 		</div>
 		<div class="logo">
-        <img src="images/mainlogo2.png"width="180px">
+        <img src="asset/images/mainlogo2.png"width="180px">
 	    </div>
 	    <div class="mobile-icons">
 		 <span class="material-symbols-outlined">search</span>
@@ -38,7 +38,7 @@
 			      <label for="radio2">Service<span class="material-symbols-outlined">expand_more</span></label>
 				</button>
 				<div class="drop-content2">
-					<a href="">Phone Repair Services</a>
+					<a href="#">Phone Repair Services</a>
                     <a href="#">Original phone accesories</a>
                     <a href="#">Broken screen services</a>
 					<a href="#">Warranty Extension Service</a>
@@ -117,7 +117,7 @@
 		  </a>
 		</div>
 		<div class="main-repairing">
-			<img src="images/cartoonphone.png"width=500px>
+			<img src="asset/images/cartoonphone.png"width=500px>
 			<div class="book">
 			<h1>Book A Phone Repair Online</h1>
 			<p>Book a phone repair for Infinix, TECNO, itel </p>
@@ -128,21 +128,21 @@
 		<h1>Discover More</h1>
 		<div class="arrow">
 			<div class="arrow-background1">
-				<img src="images/protect1.png"width="350px">
+				<img src="asset/images/protect1.png"width="350px">
 				 <h2>Screen protection</h2>
 				 <p>Screen protection for infinix, TECNO</p>
 				 <p>itel</p>
 				 <button>learn more</button>
 		    </div>
 		    <div class="arrow-background2">
-				<img src="images/protect2.png"width=350px>
+				<img src="asset/images/protect2.png"width=350px>
 				 <h2>Extended warranty</h2>
 				 <p>One-year warranty extension for infinix</p>
 				 <p>TECNO and itel</p>
 				 <button>learn more</button>
 		    </div>
 		    <div class="arrow-background3">
-				<img src="images/protect1.png"width="350px">
+				<img src="asset/images/protect1.png"width="350px">
 				 <h2>Swap a Phone</h2>
 				 <p>Swap your old infinix, TECNO or itel to a</p>
 				 <p>new phone</p>
@@ -159,7 +159,7 @@
 	<main class="Download">
 	  <div class="Apps">
 		<div class="app1">
-			<img src="images/carlcareapp.png"width=750px>
+			<img src="asset/images/carlcareapp.png"width=750px>
 		</div>
 		<div class="app2">
 			<h1>Download Carlcare App</h1>
@@ -188,7 +188,7 @@
 		   </div>
 		   <div class="Tips">
 		   	<h1>Tips & Tricks</h1>
-		   	<img src="images/warranty.jpg"width=550px>
+		   	<img src="asset/images/warranty.jpg"width=550px>
 		   </div>
 		</div>
 		<div class="customer">
@@ -196,19 +196,19 @@
 			<p>Carlcare is the official customer service Provider of Infinix Tecno Itel and More</p>
 			<div class="smart">
 				<section class="smart1">
-					<img src="images/infinix.png">
+					<img src="asset/images/infinix.png">
 				</section>
 				<section class="smart2">
-					<img src="images/tecno.png">
+					<img src="asset/images/tecno.png">
 				</section>
 				<section class="smart3">
-				    <img src="images/itel.png">	
+				    <img src="asset/images/itel.png">	
 				</section>
 				<section class="smart4">
-					<img src="images/synix.png" width="150px">
+					<img src="asset/images/synix.png" width="150px">
 				</section>
 				<section class="smart5">
-					<img src="images/oraimo.png"width=150px>
+					<img src="asset/images/oraimo.png"width=150px>
 				</section>
 		    </div>	
 		</div>
@@ -216,13 +216,13 @@
   <footer class="main-foot">
     <div class="my-foot">
 		<div class="foot1">
-			<img src="images/footlogo.png"width=180px>
+			<img src="asset/images/footlogo.png"width=180px>
 			<p>5 Oba Akran Ikeja, Lagos,Nigeria</p>
 			<section class="social">
-				<img src="images/facebook.png"width=30px>
-				<img src="images/twitter.png"width=30px>
-				<img src="images/instagram.png"width=30px>
-				<img src="images/youtube.png"width=30px>
+				<img src="asset/images/facebook.png"width=30px>
+				<img src="asset/images/twitter.png"width=30px>
+				<img src="asset/images/instagram.png"width=30px>
+				<img src="asset/images/youtube.png"width=30px>
 			</section>	
 		</div>
 		<div class="foot2">
@@ -242,7 +242,7 @@
 			<li><a href="#">Download App For Your Smartphone</a></li>	
 		</div>
 		<div class="foot4">
-			<img src="images/scan1.png"width=150px>
+			<img src="asset/images/scan1.png"width=150px>
 		</div>
 	</div>
 
